spacing fix

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a:hover { text-decoration-line: underline; }
 
 div.window, div.paper {
     text-align: left;
-    margin: 10px 3px 10px;
+    margin: 8px 3px;
     padding: 0px 5px 3px;
     border-radius: 1px;
     box-shadow: 5px 5px #20242D;
